# WholeSaling-DataWarehouse

./: .gitignore  README.md  SQLServer_driver.sh  local-env-example.sh  local-env.sh  requirements.txt  test_parquet_hdfs.py
data-warehouse/: .gitignore  README.md  SQLServer_driver.sh  generate_dim_date_time.py  local-env-example.sh  pyproject.toml  requirements.txt
data-warehouse/airflow/common/: helpers.py  ingestion_strategies.py
data-warehouse/airflow/config/: ecomerce_sys.yaml  wholesale_sys.yaml
data-warehouse/airflow/dags/: data_firewall.py  ecomerce_full_load.py  ecomerce_incremental_load.py  hr_full_load.py  hr_incremental_load.py  product_full_load.py  product_incremental_load.py  warehouse_transformation.py  wholesale_full_load.py  wholesale_incremental_load.py
data-warehouse/airflow/ingest/: data_firewall.py  delta_load.py  task_generator.py
data-warehouse/dbt_wholesaleDW/: dbt_project.yml  package-lock.yml  profiles.yml
data-warehouse/dbt_wholesaleDW/macros/: generate_time_dimension.sql
data-warehouse/dbt_wholesaleDW/models/DDS/: dimAddress.sql  dimCustomer.sql  dimDate.sql  dimOrderStatus.sql  dimProduct.sql  dimPromotion.sql  fctSales.sql
data-warehouse/dbt_wholesaleDW/models/NDS/HumanResources/: hr_Department.sql  hr_Employee.sql  hr_EmployeePayHistory.sql  hr_SalesTerritoryHistory.sql
data-warehouse/dbt_wholesaleDW/models/NDS/Person/: person.yml  person_Address.sql  person_AddressType.sql  person_BusinessEntityAddress.sql  person_BussinessContact.sql  person_BussinessEntity.sql  person_CountryRegion.sql  person_PhoneNumberType.sql  person_StateProvince.sql
data-warehouse/dbt_wholesaleDW/models/NDS/Production/: production_Location.sql  production_Product.sql  production_ProductCategory.sql  production_ProductDocument.sql  production_ProductListPriceHistory.sql  production_ProductModel.sql  production_ProductPhoto.sql  production_ProductProductPhoto.sql  production_ProductSubcategory.sql  production_ScrapReason.sql  production_TransactionHistoryArchive.sql  production_WorkOrder.sql
data-warehouse/dbt_wholesaleDW/models/NDS/Purchasing/: purchasing.yml  purchasing_ShipMethod.sql
data-warehouse/dbt_wholesaleDW/models/NDS/Sales/: sales.yml  sales_CountryRegionCurrency.sql  sales_CreditCard.sql  sales_Currency.sql  sales_Customer.sql  sales_CustomerOnlineUser.sql  sales_CustomerStoreUser.sql  sales_PersonCreditCard.sql  sales_SalesOrderDetail.sql  (+10 more)
data-warehouse/dbt_wholesaleDW/seeds/: countrycode_mapping.csv  resolved_data_quality.csv
data-warehouse/dbt_wholesaleDW/snapshots/: ecomerce_countryregion_snapshot.sql  ecomerce_product_snapshot.sql  ecomerce_salesreason_snapshot.sql  ecomerce_salesterritory_snapshot.sql  ecomerce_shoppingcartitem_snapshot.sql  ecomerce_specialoffer_snapshot.sql  ecomerce_user_snapshot.sql  ecomerce_useraddress_snapshot.sql  hr_system_addresstype_snapshot.sql  hr_system_employee_snapshot.sql  hr_system_employeephonecontact_snapshot.sql  product_management_platform_billofmaterials_snapshot.sql  product_management_platform_product_snapshot.sql  product_management_platform_productlistpricehistory_snapshot.sql  product_management_platform_productmodelproductdescriptionculture_snapshot.sql  product_management_platform_productproductphoto_snapshot.sql  product_management_platform_purchaseorderheader_snapshot.sql  product_management_platform_transactionhistoryarchive_snapshot.sql  product_management_platform_vendoraddress_snapshot.sql  product_management_platform_vendorcontact_snapshot.sql  product_management_platform_workorder_snapshot.sql  wholesale_system_countryregioncurrency_snapshot.sql  wholesale_system_currency_snapshot.sql  wholesale_system_currencyrate_snapshot.sql  wholesale_system_product_snapshot.sql  wholesale_system_salesterritory_snapshot.sql  wholesale_system_specialoffer_snapshot.sql  wholesale_system_stateprovince_snapshot.sql  wholesale_system_transactioncreditcard_snapshot.sql
data-warehouse/split_sources/: source_databases_reset.sql  split_source_automation.py  triggers_creation.py
data-warehouse/split_sources/ecomerce/: CountryRegion.sql  Product.sql  SalesOrderDetail.sql  SalesOrderHeader.sql  SalesOrderHeaderSalesReason.sql  ShoppingCartItem.sql  SpecialOffer.sql  SpecialOfferProduct.sql  StateProvince.sql  UserAddress.sql  UserCreditCard.sql
data-warehouse/split_sources/hr/: AddressType.sql  CountryRegion.sql  Department.sql  Employee.sql  EmployeeAddress.sql  EmployeeDepartmentHistory.sql  EmployeePhoneContact.sql  JobCandidate.sql  SalesTerritory.sql  StackholderPhoneContact.sql  Stakeholder.sql  StateProvince.sql
data-warehouse/split_sources/product/: ContactType.sql  Document.sql  Product.sql  ProductInventory.sql  ProductListPriceHistory.sql  ProductModel.sql  ProductProductPhoto.sql  ProductReview.sql  ProductSubcategory.sql  PurchaseOrderDetail.sql  PurchaseOrderHeader.sql  ScrapReason.sql  ShipMethod.sql  StateProvinceCountry.sql  TransactionHistory.sql  TransactionHistoryArchive.sql  Vendor.sql  VendorContact.sql  WorkOrder.sql
data-warehouse/split_sources/wholesale/: CountryRegion.sql  CountryRegionCurrency.sql  CurrencyRate.sql  Product.sql  SalesOrderDetail.sql  SalesOrderHeader.sql  SalesTaxRate.sql  ShipMethod.sql  SpecialOffer.sql  SpecialOfferProduct.sql  StateProvince.sql  Store.sql
visualization/backend/: .gitignore  init_operational_db.sh  main.py  pyproject.toml
visualization/backend/src/: constants.py
visualization/backend/src/core/: chart_generator.py  color_manager.py  connections.py  data_processor.py  query_parser.py
visualization/backend/src/models/: chart.py  chart_metadata.py  constants.py  user.py
visualization/backend/src/router/: authentication.py  charts.py
(+322 files in other folders)
