[tool.poetry]
name = "wholesaling-datawarehouse"
version = "0.1.0"
description = "The data warehouse of wholesale area"
authors = ["quocdeptraibodoi19 <quocthogminhqtm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
agate = "1.7.0"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
apache-airflow = "2.8.1"
apache-airflow-providers-common-io = "1.2.0"
apache-airflow-providers-common-sql = "1.10.0"
apache-airflow-providers-ftp = "3.7.0"
apache-airflow-providers-http = "4.8.0"
apache-airflow-providers-imap = "3.5.0"
apache-airflow-providers-sqlite = "3.7.0"
apispec = "6.4.0"
argcomplete = "3.2.1"
asgiref = "3.7.2"
async-timeout = "4.0.3"
attrs = "23.2.0"
babel = "2.14.0"
backoff = "2.2.1"
betterproto = "1.2.5"
bitarray = "2.9.2"
blinker = "1.7.0"
blis = "0.7.11"
cachelib = "0.9.0"
catalogue = "2.0.10"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.3"
clickclick = "20.10.2"
cloudpathlib = "0.16.0"
colorama = "0.4.6"
colorlog = "4.8.0"
confection = "0.1.4"
configupdater = "3.2"
connexion = "2.14.2"
cron-descriptor = "1.4.0"
croniter = "2.0.1"
cryptography = "41.0.7"
cymem = "2.0.8"
dbt-core = "1.7.11"
dbt-extractor = "0.5.1"
dbt-semantic-interfaces = "0.4.4"
dbt-spark = "1.7.1"
deprecated = "1.2.14"
dill = "0.3.1.1"
distlib = "0.3.8"
dnspython = "2.4.2"
docopt = "0.6.2"
docutils = "0.20.1"
email-validator = "1.3.1"
exceptiongroup = "1.2.0"
filelock = "3.13.1"
flask = "2.2.5"
flask-appbuilder = "4.3.10"
flask-babel = "2.0.0"
flask-caching = "2.1.0"
flask-jwt-extended = "4.6.0"
flask-limiter = "3.5.0"
flask-login = "0.6.3"
flask-session = "0.5.0"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.2.1"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
future = "0.18.3"
fuzzywuzzy = "0.18.0"
google-re2 = "1.1"
googleapis-common-protos = "1.62.0"
greenlet = "3.0.3"
grpcio = "1.60.0"
grpclib = "0.4.7"
gunicorn = "21.2.0"
h11 = "0.14.0"
h2 = "4.1.0"
hdfs = "2.7.3"
hologram = "0.0.16"
hpack = "4.0.0"
httpcore = "0.16.3"
httpx = "0.23.3"
hyperframe = "6.0.1"
idna = "3.6"
importlib-metadata = "6.11.0"
importlib-resources = "6.1.1"
impyla = "0.18.0"
inflection = "0.5.1"
isodate = "0.6.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
joblib = "1.4.2"
jsonschema = "4.20.0"
jsonschema-specifications = "2023.12.1"
kerberos = "1.3.1"
langcodes = "3.4.0"
language-data = "1.2.0"
lazy-object-proxy = "1.10.0"
leather = "0.3.4"
limits = "3.7.0"
linkify-it-py = "2.0.2"
lockfile = "0.12.2"
logbook = "1.5.3"
mako = "1.3.0"
marisa-trie = "1.1.1"
markdown = "3.5.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
marshmallow = "3.20.2"
marshmallow-oneofschema = "3.0.1"
marshmallow-sqlalchemy = "0.26.1"
mashumaro = "3.12"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
minimal-snowplow-tracker = "0.0.2"
more-itertools = "10.2.0"
msgpack = "1.0.7"
multidict = "6.0.4"
murmurhash = "1.0.10"
networkx = "2.8.8"
numpy = "1.26.3"
opentelemetry-api = "1.22.0"
opentelemetry-exporter-otlp = "1.22.0"
opentelemetry-exporter-otlp-proto-common = "1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "1.22.0"
opentelemetry-exporter-otlp-proto-http = "1.22.0"
opentelemetry-proto = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-semantic-conventions = "0.43b0"
ordered-set = "4.1.0"
packaging = "23.2"
pandas = "2.2.0"
parsedatetime = "2.4"
pathspec = "0.10.3"
pendulum = "3.0.0"
platformdirs = "4.2.0"
pluggy = "1.3.0"
preshed = "3.0.9"
presto-python-client = "0.8.4"
prison = "0.2.1"
protobuf = "4.25.2"
psutil = "5.9.7"
pure-sasl = "0.6.2"
py4j = "0.10.9.7"
pyarrow = "15.0.0"
pycparser = "2.21"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pygments = "2.17.2"
pyhive = "0.7.0"
pyjwt = "2.8.0"
pyodbc = "5.0.1"
pyspark = "3.5.1"
python-daemon = "3.0.1"
python-dateutil = "2.8.2"
python-decouple = "3.8"
python-nvd3 = "0.15.0"
python-slugify = "8.0.1"
pytimeparse = "1.1.8"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
referencing = "0.32.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986 = "1.5.0"
rich = "13.7.0"
rich-argparse = "1.4.0"
rpds-py = "0.17.1"
scipy = "1.13.1"
setproctitle = "1.3.3"
six = "1.16.0"
smart-open = "6.4.0"
sniffio = "1.3.0"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlalchemy = "1.4.51"
sqlalchemy-jsonfield = "1.0.2"
sqlalchemy-utils = "0.41.1"
sqlparams = "3.0.0"
sqlparse = "0.4.3"
srsly = "2.4.8"
stringcase = "1.2.0"
tabulate = "0.9.0"
tenacity = "8.2.3"
termcolor = "2.4.0"
text-unidecode = "1.3"
thinc = "8.2.3"
threadpoolctl = "3.5.0"
thrift = "0.16.0"
thrift-sasl = "0.4.3"
time-machine = "2.13.0"
tqdm = "4.66.4"
typer = "0.9.4"
typing-extensions = "4.9.0"
tzdata = "2023.4"
uc-micro-py = "1.0.2"
unicodecsv = "0.14.1"
universal-pathlib = "0.1.4"
urllib3 = "1.26.18"
virtualenv = "20.25.0"
wasabi = "1.1.2"
weasel = "0.3.4"
werkzeug = "2.2.3"
wrapt = "1.16.0"
wtforms = "3.1.2"
yarl = "1.9.4"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
