[tool.poetry]
name = "visualization-backend"
version = "0.1.0"
description = "The backend core of the visualization tool connecting to the Hadoop Data Warehouse."
authors = ["quocdeptraibodoi19 <quocthogminhqtm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pyhive = "^0.7.0"
thrift = "^0.20.0"
thrift-sasl = "^0.4.3"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
passlib = "^1.7.4"
python-jose = "3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
